.next-dev.log

> careerpilot@0.1.0 dev
> next dev --turbopack

   ▲ Next.js 15.5.19 (Turbopack)
   - Local:        http://localhost:3000
   - Network:      http://172.20.10.2:3000
   - Environments: .env.local

 ✓ Starting...
 ○ Compiling middleware ...
 ✓ Compiled middleware in 900ms
 ✓ Ready in 3.4s
Clerk: Refreshing the session token resulted in an infinite redirect loop. This usually means that your Clerk instance keys do not match - make sure to copy the correct publishable and secret keys from the Clerk dashboard.
 ○ Compiling / ...
 ✓ Compiled / in 9.3s
Attention: Clerk collects telemetry data from its SDKs when connected to development instances.
The data collected is used to inform Clerk's product roadmap.
To learn more, including how to opt-out from the telemetry program, visit: https://clerk.com/docs/telemetry.

 GET / 200 in 10888ms
 GET / 200 in 834ms
 GET / 307 in 458ms
 ○ Compiling /dashboard ...
 ✓ Compiled /dashboard in 1327ms
 GET /dashboard 200 in 1996ms
 ○ Compiling /cv ...
 ✓ Compiled /cv in 1107ms
 GET /cv 200 in 1344ms
 ○ Compiling /api/cv ...
 ✓ Compiled /api/cv in 1812ms
 GET /api/cv 200 in 5038ms
 GET /api/cv 200 in 5057ms
 ○ Compiling /api/cv/[id] ...
 ✓ Compiled /api/cv/[id] in 634ms
 GET /api/cv/2743f7ff-f81c-4930-99a9-6b7af7934422?offset=0&limit=25&full=1 200 in 3564ms
 ○ Compiling /fit-score ...
 ✓ Compiled /fit-score in 1344ms
 GET /fit-score 200 in 1653ms
 ○ Compiling /chat ...
 ✓ Compiled /chat in 1125ms
 GET /chat 200 in 1333ms
 ✓ Compiled /api/chat/threads in 482ms
 GET /api/chat/threads 200 in 2064ms
 GET /api/chat/threads 200 in 2144ms
 ○ Compiling /api/chat/threads/[id] ...
 ✓ Compiled /api/chat/threads/[id] in 526ms
 ✓ Compiled /api/chat/threads/[id]/messages in 437ms
 GET /api/chat/threads/8dd2648e-fa90-4812-b69e-bb41159250ff 200 in 3432ms
[assistant] dynamic benchmark synthesis failed SyntaxError: Unterminated string in JSON at position 78 (line 3 column 38)
    at JSON.parse (<anonymous>)
    at getOrSynthesiseBenchmark (lib\data\benchmarks\dynamic.ts:125:23)
    at async resolveBenchmark (lib\agents\assistant.ts:226:14)
    at async runAssistant (lib\agents\assistant.ts:597:21)
    at async POST (app\api\chat\threads\[id]\messages\route.ts:94:16)
  123 |     },
  124 |   });
> 125 |   const parsed = JSON.parse(raw) as {
      |                       ^
  126 |     title: string;
  127 |     summary: string;
  128 |     mustHave: { id: string; label: string; weight?: number; category?: string }[];
 POST /api/chat/threads/8dd2648e-fa90-4812-b69e-bb41159250ff/messages 200 in 36235ms
 GET /cv 200 in 309ms
 GET /api/cv 200 in 1787ms
 GET /api/cv 200 in 1804ms
 GET /api/cv/2743f7ff-f81c-4930-99a9-6b7af7934422?offset=0&limit=25&full=1 200 in 1289ms
 ○ Compiling /api/cv/upload ...
 ✓ Compiled /api/cv/upload in 1642ms
 POST /api/cv/upload 200 in 14951ms
 GET /api/cv 200 in 741ms
 GET /api/cv/708ade20-0f1e-4080-81fb-eaa745e17808?offset=0&limit=25&full=1 200 in 1265ms
 ○ Compiling /hunter ...
 ✓ Compiled /hunter in 1183ms
 GET /hunter 200 in 1449ms
 ○ Compiling /tracker ...
 ✓ Compiled /tracker in 849ms
 GET /tracker 200 in 1099ms
 ○ Compiling /sign-up/[[...sign-up]] ...
 ✓ Compiled /sign-up/[[...sign-up]] in 919ms
 GET /sign-up 200 in 2189ms
 GET / 200 in 295ms
 GET /dashboard 200 in 420ms
 GET /dashboard 200 in 409ms
 ⚠ Found a change in next.config.ts. Restarting the server to apply the changes...
   ▲ Next.js 15.5.19 (Turbopack)
   - Local:        http://localhost:3000
   - Network:      http://10.187.163.27:3000
   - Environments: .env.local

 ✓ Starting...
 ○ Compiling middleware ...
 ✓ Compiled middleware in 1189ms
 ✓ Ready in 8.1s
